--- a/Rik-Assignment/Pages/CompanyParticipant/Create.cshtml
+++ b/Rik-Assignment/Pages/CompanyParticipant/Create.cshtml
@@ -13,20 +13,31 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @RouteData.Values["{id:int}"]
+            @(ViewContext.RouteData.Values["parameterName"])
             <div class="form-group">
-                <label asp-for="CompanyParticipantModel.CompanyName" class="control-label"></label>
+                <label asp-for="CompanyParticipantModel.CompanyName" class="control-label">Firma nimi</label>
                 <input asp-for="CompanyParticipantModel.CompanyName" class="form-control" />
                 <span asp-validation-for="CompanyParticipantModel.CompanyName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CompanyParticipantModel.CompanyID" class="control-label"></label>
+                <label asp-for="CompanyParticipantModel.CompanyID" class="control-label">Ettevõtte reg.kood</label>
                 <input asp-for="CompanyParticipantModel.CompanyID" class="form-control" />
                 <span asp-validation-for="CompanyParticipantModel.CompanyID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CompanyParticipantModel.PaymentMethod" class="control-label"></label>
-                <input asp-for="CompanyParticipantModel.PaymentMethod" class="form-control" />
+                <label asp-for="CompanyParticipantModel.ParticipantAmount" class="control-label">Osalejate arv</label>
+                <input asp-for="CompanyParticipantModel.ParticipantAmount" class="form-control" />
+                <span asp-validation-for="CompanyParticipantModel.ParticipantAmount" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CompanyParticipantModel.PaymentMethod" class="form-label">Makseviis</label>
                 <span asp-validation-for="CompanyParticipantModel.PaymentMethod" class="text-danger"></span>
+                <select class="form-select" asp-for="CompanyParticipantModel.PaymentMethod" required>
+                    <option selected disabled value="">Makseviis</option>
+                    <option>Sularaha</option>
+                    <option>Pangaülekanne</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="CompanyParticipantModel.Description" class="control-label"></label>
