--- a/Rik-Assignment/Pages/Event/Details.cshtml
+++ b/Rik-Assignment/Pages/Event/Details.cshtml
@@ -37,18 +37,10 @@
         </dd>
     </dl>
 </div>
-<div class="form-check">
-    <input class="form-check-input" type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
-    <label class="form-check-label" for="optionsRadios1">
-        Option one is this and that—be sure to include why it's great
-    </label>
-</div>
-<div class="form-check">
-    <input class="form-check-input" type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-    <label class="form-check-label" for="optionsRadios2">
-        Option two can be something else and selecting it will deselect option one
-    </label>
-    </div>
+<p>
+    <a asp-page="/Participant/Create" asp-route-id="@Model.EventModel.Id">Lisa uus osaleja</a>
+    <a asp-page="/CompanyParticipant/Create" asp-route-id="@Model.EventModel.Id">Osale firmaga</a>
+</p>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.EventModel?.Id">Edit</a> |
     <a asp-page="./Index">Back to List</a>
