--- a/Rik-Assignment/Pages/Participant/Index.cshtml
+++ b/Rik-Assignment/Pages/Participant/Index.cshtml
@@ -26,6 +26,9 @@
                 @Html.DisplayNameFor(model => model.ParticipantModel[0].PaymentMethod)
             </th>
             <th>
+                @Html.DisplayNameFor(model=> model.ParticipantModel[0].EventRefID)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.ParticipantModel[0].Description)
             </th>
             <th></th>
@@ -45,6 +48,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PaymentMethod)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EventRefID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
