frontend incomplete but in progress

--- a/Rik-Assignment/Pages/CompanyParticipant/Details.cshtml
+++ b/Rik-Assignment/Pages/CompanyParticipant/Details.cshtml
@@ -39,5 +39,5 @@
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.CompanyParticipantModel?.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a href="##" onClick="history.go(-1); return false;"> Tagasi</a>
 </div>
