--- a/Rik-Assignment/Pages/CompanyParticipant/Create.cshtml
+++ b/Rik-Assignment/Pages/CompanyParticipant/Create.cshtml
@@ -9,7 +9,7 @@
 
 <h4>CompanyParticipantModel</h4>
 <hr />
-<div class="row">
+<div class="row col-form-label-lg">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -52,7 +52,7 @@
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a href="##" onClick="history.go(-1); return false;"> Tagasi</a>
 </div>
 
 @section Scripts {
