--- a/Rik-Assignment/Pages/Event/Create.cshtml
+++ b/Rik-Assignment/Pages/Event/Create.cshtml
@@ -42,7 +42,7 @@
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a href="##" onClick="history.go(-1); return false;"> Tagasi</a>
 </div>
 
 @section Scripts {
