--- a/Rik-Assignment/Pages/Participant/Create.cshtml
+++ b/Rik-Assignment/Pages/Participant/Create.cshtml
@@ -55,7 +55,7 @@
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a href="##" onClick="history.go(-1); return false;"> Tagasi</a>
 </div>
 
 @section Scripts {
