--- a/Rik-Assignment/Pages/Participant/Delete.cshtml
+++ b/Rik-Assignment/Pages/Participant/Delete.cshtml
@@ -47,6 +47,6 @@
     <form method="post">
         <input type="hidden" asp-for="ParticipantModel.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a href="##" onClick="history.go(-1); return false;"> Tagasi</a>
     </form>
 </div>
