--- a/Rik-Assignment/Pages/Participant/Edit.cshtml
+++ b/Rik-Assignment/Pages/Participant/Edit.cshtml
@@ -47,7 +47,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a href="##" onClick="history.go(-1); return false;"> Tagasi</a>
 </div>
 
 @section Scripts {
