--- a/Rik-Assignment/Pages/Participant/Edit.cshtml
+++ b/Rik-Assignment/Pages/Participant/Edit.cshtml
@@ -5,50 +5,55 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>ParticipantModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<section class="container  bg-white">
+    <div class="bg-primary mt-2">
+        <p class="h1">Osavõtja info</p>
+    </div>
+<div class="container col-4 text-dark">
+            <h4>Uus Osavõtja</h4>
+            <div class=" container row col-12">
+                <div class="">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ParticipantModel.Id" />
             <div class="form-group">
-                <label asp-for="ParticipantModel.FirstName" class="control-label"></label>
+                <label asp-for="ParticipantModel.FirstName" class="control-label">Eesnimi:</label>
                 <input asp-for="ParticipantModel.FirstName" class="form-control" />
                 <span asp-validation-for="ParticipantModel.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ParticipantModel.LastName" class="control-label"></label>
+                <label asp-for="ParticipantModel.LastName" class="control-label">Perenimi:</label>
                 <input asp-for="ParticipantModel.LastName" class="form-control" />
                 <span asp-validation-for="ParticipantModel.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ParticipantModel.PersonalID" class="control-label"></label>
+                <label asp-for="ParticipantModel.PersonalID" class="control-label">Isikukood:</label>
                 <input asp-for="ParticipantModel.PersonalID" class="form-control" />
                 <span asp-validation-for="ParticipantModel.PersonalID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ParticipantModel.PaymentMethod" class="control-label"></label>
-                <input asp-for="ParticipantModel.PaymentMethod" class="form-control" />
+                <label asp-for="ParticipantModel.PaymentMethod" class="form-label">Makseviis:</label>
                 <span asp-validation-for="ParticipantModel.PaymentMethod" class="text-danger"></span>
+                <select class="form-select" asp-for="ParticipantModel.PaymentMethod" required>
+                      <option selected disabled value="">Makseviis</option>
+                      <option>Sularaha</option>
+                      <option>Pangaülekanne</option>
+                </select>
             </div>
             <div class="form-group">
-                <label asp-for="ParticipantModel.Description" class="control-label"></label>
-                <input asp-for="ParticipantModel.Description" class="form-control" />
+                <label asp-for="ParticipantModel.Description" class="control-label">Lisainfo</label>
+                <textarea asp-for="ParticipantModel.Description" class="form-control" ></textarea>
                 <span asp-validation-for="ParticipantModel.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                        <a class="btn btn-outline-dark btn-light" href="##" onClick="history.go(-1); return false;"> Tagasi</a>
+                <input type="submit" value="Muuda" class="btn btn-primary" />
             </div>
         </form>
+            </div>
+        </div>
     </div>
-</div>
-
-<div>
-    <a href="##" onClick="history.go(-1); return false;"> Tagasi</a>
-</div>
+</section>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
