--- a/Rik-Assignment/Pages/CompanyParticipant/Delete.cshtml
+++ b/Rik-Assignment/Pages/CompanyParticipant/Delete.cshtml
@@ -4,43 +4,49 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>CompanyParticipantModel</h4>
+<section class="container  bg-white">
+    <div class="bg-primary mt-2">
+        <p class="h1">Firma kustutamine</p>
+    </div>
+    <div class="container col-4 text-dark">
+        <h4>Kustuta firma</h4>
+        <div class=" container row">
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CompanyParticipantModel.CompanyName)
+        <dt class="col-5">
+            Firma nimi:
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-7">
             @Html.DisplayFor(model => model.CompanyParticipantModel.CompanyName)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CompanyParticipantModel.CompanyID)
+        <dt class="col-5">
+            Ettevõtte reg. kood:
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-7">
             @Html.DisplayFor(model => model.CompanyParticipantModel.CompanyID)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CompanyParticipantModel.PaymentMethod)
+        <dt class="col-5">
+            Makseviis:
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-7">
             @Html.DisplayFor(model => model.CompanyParticipantModel.PaymentMethod)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CompanyParticipantModel.Description)
+        <dt class="col-5">
+            Lisainfo:
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-7">
             @Html.DisplayFor(model => model.CompanyParticipantModel.Description)
         </dd>
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="CompanyParticipantModel.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a href="##" onClick="history.go(-1); return false;"> Tagasi</a>
+        <a class="btn btn-outline-dark btn-light" href="##" onClick="history.go(-1); return false;"> Tagasi</a>
+        <input type="submit" value="Kustuta" class="btn btn-danger" /> 
+        
     </form>
-</div>
+
+        </div>
+    </div>
+
+</section>
