--- a/Rik-Assignment/Pages/Event/Create.cshtml
+++ b/Rik-Assignment/Pages/Event/Create.cshtml
@@ -4,47 +4,50 @@
 @{
     ViewData["Title"] = "Create";
 }
-
-<h1>Create</h1>
-
-<h4>EventModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<section class="container  bg-white">
+<div class="bg-primary mt-2">
+    <p class="h1">Ürituse Lisamine</p>
+</div>
+<div class="container col-4 text-dark">
+    <h1>Uus üritus</h1>
+<div class=" container row col-12">
+    <div class="">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="EventModel.EventName" class="control-label"></label>
+                <label asp-for="EventModel.EventName" class="control-label">Ürituse nimi</label>
                 <input asp-for="EventModel.EventName" class="form-control" />
                 <span asp-validation-for="EventModel.EventName" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="EventModel.EventDescription" class="control-label"></label>
-                <input asp-for="EventModel.EventDescription" class="form-control" />
-                <span asp-validation-for="EventModel.EventDescription" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EventModel.EventLocation" class="control-label"></label>
+                <label asp-for="EventModel.EventLocation" class="control-label">Asukoht</label>
                 <input asp-for="EventModel.EventLocation" class="form-control" />
                 <span asp-validation-for="EventModel.EventLocation" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="EventModel.EventDate" class="control-label"></label>
-                <input asp-for="EventModel.EventDate" class="form-control" />
+                <label asp-for="EventModel.EventDate" class="control-label">Toimumisaeg</label>
+                <input asp-for="EventModel.EventDate" asp-format="dd-mm-yyyy" class="form-control" />
                 <span asp-validation-for="EventModel.EventDate" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                 <label asp-for="EventModel.EventDescription" class="control-label">Kirjeldus</label>
+                 <textarea asp-for="EventModel.EventDescription" class="form-control"></textarea>
+                 <span asp-validation-for="EventModel.EventDescription" class="text-danger"></span>
             </div>
+               <div class="form-group">
+                 <a class="btn btn-outline-dark btn-light" asp-area="" asp-page="/Index"> Tagasi</a>
+                <input type="submit" value="Lisa" class="btn btn-primary" />
+                </div>
         </form>
     </div>
-</div>
 
-<div>
-    <a href="##" onClick="history.go(-1); return false;"> Tagasi</a>
-</div>
 
+    </div>
+</div>
+</section>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
