--- a/Rik-Assignment/Pages/Index.cshtml
+++ b/Rik-Assignment/Pages/Index.cshtml
@@ -5,39 +5,30 @@
     ViewData["Title"] = "Üritused";
 }
 
-<h1>Üritused</h1>
-
-<section class="bg-primary">
-    <div class="container">
-        <div class="row align-items-center">
-
-            <div class="col-lg-6 order-lg-1">
-                
-                <div class="p-5 ">
-                <p>Lorem ipsume mitsuibakt kaitm ahigla njgfi</p>
-                
-                </div>
-            </div>
-            <div class="col-lg-6 order-lg-2">
-            <div class="p-5">
-                <img class="img-fluid" src="~/css/Images/pilt.jpg" />
-            </div>    
-            </div>
+<section class=" container pt-5 col-9">
+    <div class="bg-primary ">
+        <div class="d-inline-flex align-items-center">
+            <p class="col-5">Etiam in commodo metus. Nam pellentesque euismod diam,
+                nec dapibus tortor posuere nec. Suspendisse dignissim orci quis pretium vestibulum.
+                Maecenas et arcu orci. Fusce urna est, rutrum quis dolor ut, hendrerit dictum quam.
+                Maecenas mattis ligula sapien, nec lobortis lectus convallis nec. Integer feugiat sapien ac odio aliquam,
+                id venenatis neque semper. Ut est eros, finibus vel iaculis a, viverra ut ligula. Praesent sit amet maximus metus.
+                Pellentesque vel euismod erat, tempus auctor mauris. </p>
+                <img class="col-9" src="~/css/Images/pilt.jpg" />
         </div>
     </div>
 </section>
 <div class="row">
-<div class="col-md-6 p-5">
-        <h4 class="bg-primary">Tulevased üritused</h4>
+    <div class="col-1"></div>
+    <div class="container col-5 pt-2">
     <div class="table-responsive">
+    <h4 class="bg-primary">Tulevased üritused</h4>
     <table class="table table-borderless bg-white text-dark">
+
         <thead>
             <tr>
                 <th>
                     Ürituse nimi
-                </th>
-                <th>
-                    Kirjeldus
                 </th>
                 <th>
                     Asukoht
@@ -58,18 +49,19 @@
                     @Html.DisplayFor(modelItem => item.EventName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.EventDescription)
-                </td>
-                <td>
                     @Html.DisplayFor(modelItem => item.EventLocation)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.EventDate)
+                    @Html.DisplayFor(modelItem => item.EventDate) 
                 </td>
                 <td>
-                    <a asp-page="Event/Edit" asp-route-id="@item.Id">Muuda</a> |
-                    <a asp-page="Event/Details" asp-route-id="@item.Id">Vaata</a> |
-                    <a asp-page="Event/Delete" asp-route-id="@item.Id">Kustuta</a>
+                    <a class="text-dark" asp-page="Event/Details" asp-route-id="@item.Id">Osavõtjad</a> |
+                    <a class="text-dark" asp-page="Event/Edit" asp-route-id="@item.Id">Muuda</a> |
+                                    <a asp-page="Event/Delete" asp-route-id="@item.Id">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="18" fill="currentColor" class="bi bi-x text-dark" viewBox="0 0 16 16">
+                                            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+                                        </svg>
+                                    </a>
                 </td>
             </tr>
                 }
@@ -78,17 +70,14 @@
     </table>
         </div>
     </div>
-    <div class="col-md-6 p-5">
+    <div class="col-5 pt-2 container">
     <h4 class="bg-primary">Toimunud üritused</h4>
-    <div class="table-responsive">
+    <div class="">
 <table class="table table-borderless bg-white text-dark ">
     <thead>
         <tr>
             <th>
                 Ürituse nimi
-            </th>
-            <th>
-                Kirjeldus
             </th>
             <th>
                 Asukoht
@@ -110,21 +99,20 @@
                         @Html.DisplayFor(modelItem => item.EventName)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.EventDescription)
-                    </td>
-                    <td>
                         @Html.DisplayFor(modelItem => item.EventLocation)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.EventDate)
+                       @Html.DisplayFor(modelItem => item.EventDate)
                     </td>
                     <td>
-                        <a asp-page="./Details" asp-route-id="@item.Id">Vaata</a> 
+                        <a class="text-dark" asp-page="Event/Details" asp-route-id="@item.Id">Osavõtjad</a> 
                     </td>
                 </tr>
             }
         }
     </tbody>
 </table>
+           
         </div></div>
+
 </div>
