--- a/Rik-Assignment/Pages/Participant/Create.cshtml
+++ b/Rik-Assignment/Pages/Participant/Create.cshtml
@@ -5,13 +5,14 @@
 @{
     ViewData["Title"] = "Create";
 }
-
-<h1>Create</h1>
-
-<h4>ParticipantModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<section class="container  bg-white">
+    <div class="bg-primary mt-2">
+        <p class="h1">Osavõtja Lisamine</p>
+    </div>
+<div class="container col-4 text-dark">
+            <h4>Uus Osavõtja</h4>
+            <div class=" container row col-12">
+                <div class="">
         <form method="post">
             @RouteData.Values["{id:int}"]
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -44,20 +45,18 @@
             
             <div class="form-group">
                 <label asp-for="ParticipantModel.Description" class="control-label">Lisainfo</label>
-                <input asp-for="ParticipantModel.Description" class="form-control" />
+                <textarea asp-for="ParticipantModel.Description" class="form-control"></textarea>
                 <span asp-validation-for="ParticipantModel.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <a class="btn btn-outline-dark btn-light" asp-area="" asp-page="/Index"> Tagasi</a>
+                <input type="submit" value="Lisa" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a href="##" onClick="history.go(-1); return false;"> Tagasi</a>
 </div>
-
+</section>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
