--- a/Rik-Assignment/Pages/Participant/Delete.cshtml
+++ b/Rik-Assignment/Pages/Participant/Delete.cshtml
@@ -4,49 +4,52 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ParticipantModel</h4>
-    <hr />
+<section class="container  bg-white">
+    <div class="bg-primary mt-2">
+        <p class="h1">Osavõtja kustutamine</p>
+    </div>
+    <div class="container col-4 text-dark">
+        <h4>Kustuta Osavõtja</h4>
+        <div class=" container row">
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ParticipantModel.FirstName)
+        <dt class="col-5">
+            Eesnimi:
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-7">
             @Html.DisplayFor(model => model.ParticipantModel.FirstName)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ParticipantModel.LastName)
+        <dt class="col-5">
+            Perekonanimi:
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-7">
             @Html.DisplayFor(model => model.ParticipantModel.LastName)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ParticipantModel.PersonalID)
+        <dt class="col-5">
+            Isikukood:
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-7">
             @Html.DisplayFor(model => model.ParticipantModel.PersonalID)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ParticipantModel.PaymentMethod)
+        <dt class="col-5">
+            Makseviis:
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-7">
             @Html.DisplayFor(model => model.ParticipantModel.PaymentMethod)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ParticipantModel.Description)
+        <dt class="col-5">
+            Lisainfo:
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-7">
             @Html.DisplayFor(model => model.ParticipantModel.Description)
         </dd>
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="ParticipantModel.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Kustuta" class="btn btn-danger" /> |
         <a href="##" onClick="history.go(-1); return false;"> Tagasi</a>
     </form>
-</div>
+        </div>
+    </div>
+
+</section>
