--- a/Rik-Assignment/Pages/Shared/_Layout.cshtml
+++ b/Rik-Assignment/Pages/Shared/_Layout.cshtml
@@ -3,16 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Rik_Assignment</title>
+    <title>@ViewData["Title"] - NULLAM</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 
 </head>
-<body>
+<body class="bg-white bg-opacity-75">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Rik_Assignment</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid col-8">
+                <a class="navbar-brand" asp-area="" asp-page="/Index">NULLAM</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,10 +20,10 @@
                 <div class="navbar-collapse collapse">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Index">Avaleht</a>
+                            <a class="nav-link  text-dark" asp-area="" asp-page="/Index">Avaleht</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Privacy">Ürituse Lisamine</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Event/Create">Ürituse Lisamine</a>
                         </li>
                     </ul>
                 </div>
@@ -36,9 +36,37 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - Rik_Assignment - <a asp-area="" asp-page="/Privacy">Privacy</a>
+    <footer class="container border-top footer text-muted bg-dark">
+        <div class="container row">
+            <div class="col-4">
+                <p class="h3">Lorem</p>
+                <p class="row">dolor sit</p>
+                <p class="row">amet, consectetur</p>
+                <p class="row">adipiscing elit</p>
+                <p class="row">Donec eu augue</p>
+                </div>
+            <div class="col-4">
+                <p class="h3">Ipsum</p>
+                <p class="row">Fusce enim neque</p>
+                <p class="row">facilisis ac pretium</p>
+                <p class="row">fermentum quis</p>
+                <p class="row">facilisis dui</p>
+               </div>
+            <div class="col-4 row"><p class="h3">Kontakt</p>
+                <div class="col-6">
+                <p class="row h6 fw-bold">Peakontor:Tallinnas</p>
+                <p class="row">Endla 45, 10615 Tallinn</p>
+                <p class="row">Telefon: 605 1212</p>
+                <p class="row">Faks: 605 3131</p>
+                </div>
+                <div class="col-6">
+                    <p class="row h6 fw-bold">Harukontor:Võrus</p>
+                <p class="row">Kreutzwaldi 31, 65609 Võru</p>
+                <p class="row">Telefon: 605 4545</p>
+                <p class="row">Faks: 605 6969</p>
+                </div>
+            </div>
+            
         </div>
     </footer>
 
