Styling needed some work and added Payment methods, it is now possible to add different payments

--- a/Rik-Assignment/Pages/CompanyParticipant/Delete.cshtml
+++ b/Rik-Assignment/Pages/CompanyParticipant/Delete.cshtml
@@ -6,7 +6,7 @@
 }
 <section class="container  bg-white">
     <div class="bg-primary mt-2">
-        <p class="h1">Firma kustutamine</p>
+        <p class="h1 text-light">Firma kustutamine</p>
     </div>
     <div class="container col-4 text-dark">
         <h4>Kustuta firma</h4>
