--- a/Rik-Assignment/Pages/Event/Create.cshtml
+++ b/Rik-Assignment/Pages/Event/Create.cshtml
@@ -6,7 +6,7 @@
 }
 <section class="container  bg-white">
 <div class="bg-primary mt-2">
-    <p class="h1">Ürituse Lisamine</p>
+    <p class="h1 text-light">Ürituse Lisamine</p>
 </div>
 <div class="container col-4 text-dark">
     <h1>Uus üritus</h1>
