--- a/Rik-Assignment/Pages/Event/Delete.cshtml
+++ b/Rik-Assignment/Pages/Event/Delete.cshtml
@@ -10,7 +10,7 @@
         <p class="h1">Ürituse kustutamine</p>
     </div>
     <div class="container col-4 text-dark">
-        <h4>Kustuta üritus</h4>
+        <h4 class="text-light">Kustuta üritus</h4>
         <div class=" container row">
     <dl class="row">
         <dt class="col-5">
