--- a/Rik-Assignment/Pages/Event/Edit.cshtml
+++ b/Rik-Assignment/Pages/Event/Edit.cshtml
@@ -6,10 +6,10 @@
 }
 <section class="container  bg-white">
 <div class="bg-primary mt-2">
-    <p class="h1">Ürituse Muutmine</p>
+    <p class="h1 text-light">Ürituse Muutmine</p>
 </div>
 <div class="container col-4 text-dark">
-    <h1>Muuda üritust</h1>
+    <h1 class="text-light">Muuda üritust</h1>
 <div class=" container row col-12">
 
         <form method="post">
