--- a/Rik-Assignment/Pages/Index.cshtml
+++ b/Rik-Assignment/Pages/Index.cshtml
@@ -8,7 +8,7 @@
 <section class=" container pt-5 col-9">
     <div class="bg-primary ">
         <div class="d-inline-flex align-items-center">
-            <p class="col-5">Etiam in commodo metus. Nam pellentesque euismod diam,
+            <p class="col-5 text-light">Etiam in commodo metus. Nam pellentesque euismod diam,
                 nec dapibus tortor posuere nec. Suspendisse dignissim orci quis pretium vestibulum.
                 Maecenas et arcu orci. Fusce urna est, rutrum quis dolor ut, hendrerit dictum quam.
                 Maecenas mattis ligula sapien, nec lobortis lectus convallis nec. Integer feugiat sapien ac odio aliquam,
@@ -22,7 +22,7 @@
     <div class="col-1"></div>
     <div class="container col-5 pt-2">
     <div class="table-responsive">
-    <h4 class="bg-primary">Tulevased üritused</h4>
+    <h4 class="bg-primary text-light">Tulevased üritused</h4>
     <table class="table table-borderless bg-white text-dark">
 
         <thead>
@@ -71,7 +71,7 @@
         </div>
     </div>
     <div class="col-5 pt-2 container">
-    <h4 class="bg-primary">Toimunud üritused</h4>
+    <h4 class="bg-primary text-light">Toimunud üritused</h4>
     <div class="">
 <table class="table table-borderless bg-white text-dark ">
     <thead>
