--- a/Rik-Assignment/Pages/Participant/Delete.cshtml
+++ b/Rik-Assignment/Pages/Participant/Delete.cshtml
@@ -9,7 +9,7 @@
         <p class="h1">Osavõtja kustutamine</p>
     </div>
     <div class="container col-4 text-dark">
-        <h4>Kustuta Osavõtja</h4>
+        <h4 class="text-light">Kustuta Osavõtja</h4>
         <div class=" container row">
     <dl class="row">
         <dt class="col-5">
