--- a/Rik-Assignment/Pages/Shared/_Layout.cshtml
+++ b/Rik-Assignment/Pages/Shared/_Layout.cshtml
@@ -21,9 +21,12 @@
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
                             <a class="nav-link  text-dark" asp-area="" asp-page="/Index">Avaleht</a>
-                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Event/Create">Ürituse Lisamine</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link  text-dark" asp-area="" asp-page="/Payment/Index">Makseviisid</a>
                         </li>
                     </ul>
                 </div>
