--- a/Rik-Assignment/Pages/CompanyParticipant/Create.cshtml
+++ b/Rik-Assignment/Pages/CompanyParticipant/Create.cshtml
@@ -4,14 +4,14 @@
 @{
     ViewData["Title"] = "Create";
 }
-<section class="container  bg-white">
+<section class="container bg-white">
     <div class="bg-primary mt-2">
-        <p class="h1">Firma Lisamine</p>
+        <p class="h1 text-light">Firma Lisamine</p>
     </div>
 <div class="container col-4 text-dark">
             <h4>Uus Osavõtja</h4>
-            <div class=" container row col-12">
-                <div class="">
+            <div class="container row col-12">
+                <div>
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @RouteData.Values["{id:int}"]
@@ -36,8 +36,12 @@
                 <span asp-validation-for="CompanyParticipantModel.PaymentMethod" class="text-danger"></span>
                 <select class="form-select" asp-for="CompanyParticipantModel.PaymentMethod" required>
                     <option selected disabled value="">Makseviis</option>
-                    <option>Sularaha</option>
-                    <option>Pangaülekanne</option>
+                            <option>Sularaha</option>
+                            <option>Pangaülekanne</option>
+                            @foreach (var item in Model.PaymentModel)
+                            {
+                                <option>@Html.DisplayTextFor(modelItem =>item.PaymentName)</option>
+                            }
                 </select>
             </div>
             <div class="form-group">
