--- a/Rik-Assignment/Pages/CompanyParticipant/Edit.cshtml
+++ b/Rik-Assignment/Pages/CompanyParticipant/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <section class="container  bg-white">
     <div class="bg-primary mt-2">
-        <p class="h1">Firma info</p>
+        <p class="h1 text-light">Firma info</p>
     </div>
     <div class="container col-4 text-dark">
         <h4>Uus Osavõtja</h4>
@@ -36,8 +36,12 @@
                 <span asp-validation-for="CompanyParticipantModel.PaymentMethod" class="text-danger"></span>
                 <select class="form-select" asp-for="CompanyParticipantModel.PaymentMethod" required>
                     <option selected disabled value="">Makseviis</option>
-                    <option>Sularaha</option>
-                    <option>Pangaülekanne</option>
+                                    <option>Sularaha</option>
+                                    <option>Pangaülekanne</option>
+                            @foreach (var item in Model.PaymentModel)
+                            {
+                                            <option>@Html.DisplayTextFor(modelItem =>item.PaymentName)</option>
+                            }
                 </select>
             </div>
             <div class="form-group">
