--- a/Rik-Assignment/Pages/Event/Details.cshtml
+++ b/Rik-Assignment/Pages/Event/Details.cshtml
@@ -7,7 +7,7 @@
 <section class="">
     <div class="container-fluid mt-2 d-inline-flex bg-primary">
         <div class="justify-content-between align-items-center mb-4 ">
-        <h1 class=" mb-0 ">Osavõtjad</h1>
+        <h1 class=" mb-0 text-light">Osavõtjad</h1>
     </div>
     </div>
 
@@ -46,7 +46,7 @@
                 <thead>
                     <tr>
                         <th>Osaleja nimi</th>
-                        <th></th>
+                        <th>Makseviis</th>
                         <th>Isikukood</th>
                         <th></th>
                     </tr>
@@ -59,8 +59,9 @@
                         <td>
                 @Html.DisplayFor(modelItem =>item.FirstName)
                 @Html.DisplayFor(modelItem =>item.LastName)
+                
                         </td>
-                        <td></td>
+                            <td>@Html.DisplayFor(modelItem =>item.PaymentMethod)</td>
                         <td>
                 @Html.DisplayFor(modelItem =>item.PersonalID)
                         </td>
@@ -84,6 +85,7 @@
                 <thead>
                     <tr>
                         <th>Firma nimi</th>
+                        <th>Makseviis</th>
                         <th>Ettevõtte reg. kood</th>
                         <th>Osalejate arv</th>
                         <th></th>
@@ -93,6 +95,9 @@
                     <tr>
                             <td>
                             @Html.DisplayFor(modelItem =>item.CompanyName)
+                            </td>
+                            <td>
+                            @Html.DisplayFor(modelItem =>item.PaymentMethod)
                             </td>
                             <td>
                             @Html.DisplayFor(modelItem=> item.CompanyID)
